ajustando img caminho s e link e add mais uma box

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Blog/css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -74,11 +74,18 @@
                             Iure, quam?</p>
                     </div>
                 </div>
+                <div class="box-area-box">
+                    <div class="box-area-box-content">
+                        <h2>hjhsfh</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!
+                            Iure, quam?</p>
+                    </div>
+                </div>
             </div>
             <div class="section-area">
                 <div class="section-area-content">
                     <div class="section-area-img">
-                        <img src="pexels-luis-gomes-546819.jpg" alt="">
+                        <img src="Blog/img/pexels-luis-gomes-546819.jpg" alt="">
                     </div>
                     <div class="section-area-box">
                         <div class="section-area-box-content">
