ajustando alinhamento das box

--- a/index.html
+++ b/index.html
@@ -49,36 +49,31 @@
                 <div class="box-area-box">
                     <div class="box-area-box-content">
                         <h2>hjhsfh</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!
-                            Iure, quam?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!Iure, quam?</p>
                     </div>
                 </div>
                 <div class="box-area-box">
                     <div class="box-area-box-content">
                         <h2>hjhsfh</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!
-                            Iure, quam?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!Iure, quam?</p>
                     </div>
                 </div>
                 <div class="box-area-box">
                     <div class="box-area-box-content">
                         <h2>hjhsfh</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!
-                            Iure, quam?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!Iure, quam?</p>
                     </div>
                 </div>
                 <div class="box-area-box">
                     <div class="box-area-box-content">
                         <h2>hjhsfh</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!
-                            Iure, quam?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!Iure, quam?</p>
                     </div>
                 </div>
                 <div class="box-area-box">
                     <div class="box-area-box-content">
                         <h2>hjhsfh</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!
-                            Iure, quam?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!Iure, quam?</p>
                     </div>
                 </div>
             </div>
