add img ao footer

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
     <footer class="footer">
         <div class="logo-footer">
             <h1>NEGÓCIOS</h1>
+            <img src="Blog/img/pexels-adam-krypel-6499137.jpg" alt="">
         </div>
         <div class="menu-footer">
             <nav class="menu-list">
