ajustanto estrutura responsiva (ainda imcompleta)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
     <link rel="stylesheet" href="Blog/css/style.css">
+    <link rel="stylesheet" href="Blog/css/responsive.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
@@ -40,9 +41,6 @@
                             laboriosam corrupti minus nulla ratione optio repellat voluptatibus quis, odit, deserunt
                             expedita reiciendis aut eius rerum? Praesentium, quaerat!</p>
                     </div>
-                </div>
-                <div class="slide-area-img">
-                    <img src="" alt="">
                 </div>
             </div>
             <div class="box-area">
@@ -102,9 +100,7 @@
                     </div>
                     <div class="section-area-txt">
                         <div class="section-area-txt-tx">
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis tempora vel porro nobis hic
-                                commodi modi laboriosam. Odio, ratione animi nam sapiente aliquam fugiat minima impedit aut
-                                officiis, explicabo reiciendis?</p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis tempora vel porro noquam fugiat minima impedit autofficiis, explicabo reiciendis?</p>
                         </div>
                     </div>
                 </div>
