ajustando header responsivo

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 </ul>
             </nav>
         </div>
+        <div class="menu-responsive-icon">
+            <i class='bx bx-menu'></i>
+        </div>
     </header>
     
     <div class="conteiner-principal">
