ajustando dados area

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <i class='bx bx-menu'></i>
         </div>
     </header>
-    
+
     <div class="conteiner-principal">
         <div class="conteiner-content">
             <div class="slide-area">
@@ -50,31 +50,36 @@
                 <div class="box-area-box">
                     <div class="box-area-box-content">
                         <h2>hjhsfh</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!Iure, quam?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio
+                            repudiandae!Iure, quam?</p>
                     </div>
                 </div>
                 <div class="box-area-box">
                     <div class="box-area-box-content">
                         <h2>hjhsfh</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!Iure, quam?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio
+                            repudiandae!Iure, quam?</p>
                     </div>
                 </div>
                 <div class="box-area-box">
                     <div class="box-area-box-content">
                         <h2>hjhsfh</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!Iure, quam?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio
+                            repudiandae!Iure, quam?</p>
                     </div>
                 </div>
                 <div class="box-area-box">
                     <div class="box-area-box-content">
                         <h2>hjhsfh</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!Iure, quam?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio
+                            repudiandae!Iure, quam?</p>
                     </div>
                 </div>
                 <div class="box-area-box">
                     <div class="box-area-box-content">
                         <h2>hjhsfh</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio repudiandae!Iure, quam?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempor dolorum odio
+                            repudiandae!Iure, quam?</p>
                     </div>
                 </div>
             </div>
@@ -103,7 +108,8 @@
                     </div>
                     <div class="section-area-txt">
                         <div class="section-area-txt-tx">
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis tempora vel porro noquam fugiat minima impedit autofficiis, explicabo reiciendis?</p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis tempora vel porro
+                                noquam fugiat minima impedit autofficiis, explicabo reiciendis?</p>
                         </div>
                     </div>
                 </div>
@@ -117,15 +123,15 @@
                                 <h2>jcdb</h2>
                             </div>
                             <div class="icons">
-                                <i class='bx bx-package' ></i>
+                                <i class='bx bx-package'></i>
                                 <h2>jcdb</h2>
                             </div>
                             <div class="icons">
-                                <i class='bx bx-money-withdraw' ></i>
+                                <i class='bx bx-money-withdraw'></i>
                                 <h2>jcdb</h2>
                             </div>
                             <div class="icons">
-                                <i class='bx bx-objects-vertical-bottom' ></i>
+                                <i class='bx bx-objects-vertical-bottom'></i>
                                 <h2>jcdb</h2>
                             </div>
                         </div>
@@ -134,26 +140,30 @@
                 <div class="dados-area-content">
                     <div class="conteiner-2">
                         <div class="conteiner-2-content">
-                            <i class='bx bxs-objects-vertical-center' ></i>
+                            <i class='bx bxs-objects-vertical-center'></i>
                         </div>
                     </div>
                     <div class="conteiner-3">
                         <div class="conteiner-3-content">
                             <div class="conteiner-3-content-lista">
                                 <ul>
-                                    <li class="conteiner-3-content-lista-item"><input type="checkbox" name="" checked id="" >hjfçaghuagçuagçaug</li>
-                                    <li class="conteiner-3-content-lista-item"><input type="checkbox" name="" checked id="">hjfçaghuagçuagçaug</li>
-                                    <li class="conteiner-3-content-lista-item"><input type="checkbox" name="" checked id="">hjfçaghuagçuagçaug</li>
-                                    <li class="conteiner-3-content-lista-item"><input type="checkbox" name="" checked id="">hjfçaghuagçuagçaug</li>
+                                    <li class="conteiner-3-content-lista-item"><input type="checkbox" name="" checked
+                                            id="">hjfçaghuagçuagçaug</li>
+                                    <li class="conteiner-3-content-lista-item"><input type="checkbox" name="" checked
+                                            id="">hjfçaghuagçuagçaug</li>
+                                    <li class="conteiner-3-content-lista-item"><input type="checkbox" name="" checked
+                                            id="">hjfçaghuagçuagçaug</li>
+                                    <li class="conteiner-3-content-lista-item"><input type="checkbox" name="" checked
+                                            id="">hjfçaghuagçuagçaug</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                     <div class="conteiner-4">
                         <div class="conteiner-4-content">
-                                <div class="conteiner-4-content-frase">
-                                    <p>djsbvçjbçajvjrbvãjrbvãbr~jab~rjlbãv</p>
-                                </div>
+                            <div class="conteiner-4-content-frase">
+                                <p>djsbvçjbçajvjrbvãjrbvãbr~jab~rjlbãv</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -187,7 +197,7 @@
         </div>
         <div class="copyRight">
             <div class="copyRight-conteiner">
-                <p>Copy Right  |  Todos os diretos reservados 2023</p>
+                <p>Copy Right | Todos os diretos reservados 2023</p>
             </div>
         </div>
     </footer>
